refactoring, use simple-component also in builder module