@@ -4,13 +4,11 @@ import com.palantir.javapoet.FieldSpec;
 import com.palantir.javapoet.MethodSpec;
 import com.palantir.javapoet.ParameterSpec;
 import com.palantir.javapoet.TypeName;
-import java.util.ArrayList;
 import java.util.List;
 import net.zerobuilder.compiler.generate.GoalDescription;
 import net.zerobuilder.compiler.generate.ProjectedParameter;
 
 import static com.palantir.javapoet.MethodSpec.methodBuilder;
-import static java.util.stream.Collectors.toList;
 import static javax.lang.model.element.Modifier.PRIVATE;
 import static net.zerobuilder.compiler.generate.ZeroUtil.fieldSpec;
 import static net.zerobuilder.compiler.generate.ZeroUtil.parameterSpec;
@@ -18,20 +16,19 @@ import static net.zerobuilder.modules.updater.RegularUpdater.implType;
 
 final class Updater {
 
+  Updater() {
+  }
+
   static List<FieldSpec> fields(GoalDescription description) {
-    List<FieldSpec> builder = new ArrayList<>(description.parameters().size());
-    for (ProjectedParameter step : description.parameters()) {
-      String name = step.name();
-      TypeName type = step.type();
-      builder.add(fieldSpec(type, name, PRIVATE));
-    }
-    return builder;
+    return description.parameters().stream()
+        .map(step -> fieldSpec(step.type(), step.name(), PRIVATE))
+        .toList();
   }
 
   static List<MethodSpec> stepMethods(GoalDescription description) {
     return description.parameters().stream()
         .map(step -> normalUpdate(description, step))
-        .collect(toList());
+        .toList();
   }
 
   private static MethodSpec normalUpdate(
@@ -47,9 +44,5 @@ final class Updater {
         .addStatement("return this")
         .addModifiers(description.details().getAccess())
         .build();
-  }
-
-  private Updater() {
-    throw new UnsupportedOperationException("no instances");
   }
 }
